--- a/catchARide/my_app/templates/base.html
+++ b/catchARide/my_app/templates/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/splash.svg' %}" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/splash-car.svg' %}" />
     <title>CatchARide</title>
 
     {% block head %}
@@ -18,22 +18,34 @@
 <body>
     <header>
         <div class="header-logo-container">
-            <a href="/">
-                <img src="{% static 'images/header-logo.svg' %}" alt="CatchARide Logo" />
-            </a>
+            <a href="/"><img src="{% static 'images/header-logo-car.svg' %}" alt="CatchARide Logo" /></a>
         </div>
         <nav>
             <ul>
-                <li><a href="{% url 'car-index' %}">All Cars</a></li>
-                <li><a href="{% url 'car-create' %}">Add a Car</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'car-index' %}">All Cars</a></li>
+                    <li><a href="{% url 'car-create' %}">Add a Car</a></li>
+                    <li><a href="{% url 'accessory-index' %}">All Accessories</a></li>
+                    <li><a href="{% url 'accessory-create' %}">Add an Accessory</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li>
+                        <form id="logout-form" method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit">Log out</button>
+                        </form>
+                    </li>
+                {% else %}
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'home' %}">Login</a></li>
+                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
+
     <main>
         {% block content %}
         {% endblock %}
     </main>
 </body>
-
 </html>
