--- a/catchARide/my_app/templates/home.html
+++ b/catchARide/my_app/templates/home.html
@@ -1,10 +1,34 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
+{% endblock %}
 
 {% block content %}
-<div class="home-container">
+<section class="logo-container">
+  <div class="car-container">
+    <img src="{% static 'images/splash-car.svg' %}" alt="CatchARide Car Logo" />
+  </div>
+  <img src="{% static 'images/logotype-car.svg' %}" alt="Text reads: CatchARide" />
+</section>
+
+{% if not user.is_authenticated %}
+  <section>
+    <form action="{% url 'home' %}" method="post" class="login">
+      <h1>Login</h1>
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="hidden" name="next" value="{{ next }}" />
+      <button type="submit" class="btn submit">Login</button>
+    </form>
+  </section>
+{% else %}
+  <div class="home-container">
     <h1>Welcome to CatchARide</h1>
     <p>Track, add, and explore your cars!</p>
     <a href="{% url 'car-index' %}" class="btn">View All Cars</a>
     <a href="{% url 'car-create' %}" class="btn">Add a Car</a>
-</div>
+  </div>
+{% endif %}
 {% endblock %}
