--- a/catchARide/my_app/templates/my_app/car_form.html
+++ b/catchARide/my_app/templates/my_app/car_form.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block head %}
+  <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+{% endblock %}
+
 {% block content %}
 <div class="form-container">
     <h1>{% if object %}Update Car{% else %}Add a Car{% endif %}</h1>
